<?xml version="1.0" encoding="utf-8"?>
    <menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort"
                android:icon="@drawable/ic_sort_black_24dp"
                android:title="@string/sort"
                app:showAsAction="never">
                <menu>
                    <item
                        android:title="@string/pref_sort_by_popular_label"
                        android:id="@+id/sort_by_popular"
                        app:showAsAction="ifRoom"/>
                    <item
                        android:title="@string/pref_sort_by_top_label"
                        android:id="@+id/sort_by_top"
                        app:showAsAction="ifRoom"/>
                </menu>
            </item>
            <item
                android:id="@+id/favorites"
                android:icon="@drawable/favorite_24dp"
                android:title="@string/favorite_label"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>